--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ dlib==19.22.0
 face-recognition==1.3.0
 mediapipe==0.8.6
 numpy==1.21.0
-opencv-python==4.5.3.56
+opencv-python-headless
 streamlit==0.85.1
