--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,16 @@
- channels:
-     - conda-forge
- dependencies:
-     - dlib
-     - numpy
-     - Pillow
-     - matplotlib
-     - opencv
-     - face_recognition
-     - streamlit_webrtc
+channels:
+  - defaults
+dependencies:
+  - python=3.7.5
+  - pip=20.0.1
+  - pip:
+    - Pillow==8.3.1
+    - cmake==3.21.0
+    - dlib==19.22.0
+    - face-recognition==1.3.0
+    - matplotlib==3.4.2
+    - numpy==1.21.0
+    - streamlit==0.85.1
+    - streamlit-webrtc==0.6.3
+    - mediapipe==0.8.6
+    - opencv-python-headless
