--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
 channels:
   - defaults
 dependencies:
-  - python=3.7.5
-  - pip=21.3.1
+  - python==3.7.5
+  - pip==21.3.1
   - pip:
     - Pillow==8.3.1
     - cmake==3.21.0
