--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - python==3.7.5
+  - pip
   - Pillow==8.3.1
   - cmake==3.21.0
   - dlib==19.22.0
