--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - Pillow==8.3.1
   - cmake==3.21.0
   - dlib==19.22.0
-  - face-recognition==1.3.0
+  - face_recognition==1.3.0
   - matplotlib==3.4.2
   - numpy==1.21.0
   - streamlit==0.85.1
