--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ face_recognition==1.3.0
 matplotlib==3.4.2
 numpy==1.21.0
 streamlit==0.85.1
-mediapipe==0.8.6
-streamlit-webrtc==0.6.3
-opencv-contrib-python==4.5.3.56
-opencv-python==4.5.3.56
+mediapipe
+streamlit-webrtc
+opencv-contrib-python
+opencv-python
