--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Pillow==8.3.1
-cmake==3.21.0
-dlib==19.22.0
-face_recognition==1.3.0
-matplotlib==3.4.2
-numpy==1.21.0
-streamlit==0.85.1
+Pillow
+cmake
+dlib
+face_recognition
+matplotlib
+numpy
+streamlit
 mediapipe
 streamlit-webrtc
 opencv-contrib-python
